Implementation du nouveau contrat OpenAPI
